css issue not showing full page scroll

--- a/client/src/assets/custom.scss
+++ b/client/src/assets/custom.scss
@@ -2,3 +2,7 @@
   color: #fff;
   background-color: #007bff;
 }
+
+.container {
+  padding-bottom: 3rem
+}
